[metadata]
name = starbun
version = 0.0.1
author = Sigfrid Stjärnholm
author_email = sigfrid@stjarnholm.com
description = A package for running and evaluating simulation experiments
long_description = file: README.md, LICENSE.txt
long_description_content_type = text/markdown
url = https://github.com/Kladdy/starbun
project_urls =
    Bug Tracker = https://github.com/Kladdy/starbun/issues
    repository = https://github.com/Kladdy/starbun
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = .
packages = find:
python_requires = >=3.6

[options.packages.find]
where = .